objects/eSignGenieConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Access_Token_Generated_Date__c</fullName>
        <label>Access Token Generated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Time__c</fullName>
        <label>Batch Run Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_URL__c</fullName>
        <label>End URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expires_In__c</fullName>
        <label>Expires In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Log_Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Log Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eSign_Genie_Api_URL__c</fullName>
        <label>eSign Genie Api URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eSign_Genie_URL__c</fullName>
        <label>eSign Genie URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>eSign Genie Configuration</label>
</CustomObject>